force-app/main/default/objects/ssot__ServiceAppointmentAssignedResource__dlm/fields/ssot__EstimatedTravelDistanceFrom__c.field-meta.xml
<CustomField>
    <fullName>ssot__EstimatedTravelDistanceFrom__c</fullName>
    <label>Estimated Travel Distance From</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EstimatedTravelDistanceFrom</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>