force-app/main/default/objects/ssot__ServiceAppointmentAssignedResource__dlm/fields/ssot__EstimatedTravelDistanceTo__c.field-meta.xml
<CustomField>
    <fullName>ssot__EstimatedTravelDistanceTo__c</fullName>
    <label>Estimated Travel Distance To</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EstimatedTravelDistanceTo</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>