force-app/main/default/objects/ssot__ServiceAppointmentAssignedResource__dlm/fields/ssot__EstimatedTravelTimeMinutes__c.field-meta.xml
<CustomField>
    <fullName>ssot__EstimatedTravelTimeMinutes__c</fullName>
    <label>Estimated Travel Time Minutes</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>EstimatedTravelTimeMinutes</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>