force-app/main/default/objects/ssot__ServiceAppointmentAssignedResource__dlm/fields/ssot__IsPrimaryResource__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsPrimaryResource__c</fullName>
    <label>Is Primary Resource</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsPrimaryResource</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>