force-app/main/default/objects/ssot__ServiceAppointmentAssignedResource__dlm/fields/ssot__IsRequiredResource__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsRequiredResource__c</fullName>
    <label>Is Required Resource</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsRequiredResource</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>