force-app/main/default/objects/ssot__ServiceAppointmentAssignedResource__dlm/fields/ssot__rel_1705061034051_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061034051_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ServiceAppointmentAssignedResource_W_rel</label>
    <referenceTo>ssot__WorkResource__dlm</referenceTo>
    <relationshipLabel>ServiceAppointmentAssignedResource_W_rel</relationshipLabel>
    <relationshipName>rel_1705061034051_end</relationshipName>
    <type>Lookup</type>
</CustomField>