force-app/main/default/objects/ssot__ServiceAppointmentAssignedResource__dlm/fields/ssot__ServiceAppointmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ServiceAppointmentId__c</fullName>
    <label>Service Appointment</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ServiceAppointmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>