force-app/main/default/objects/ssot__ServiceAppointmentAssignedResource__dlm/fields/ssot__WorkResourceRole__c.field-meta.xml
<CustomField>
    <fullName>ssot__WorkResourceRole__c</fullName>
    <label>Work Resource Role</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>WorkResourceRole</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>